# shadowsocks-deepin

./: .gitignore  .travis.yml  CMakeLists.txt  ConfigUtil.cpp  ConfigUtil.h  DownloadUtil.cpp  EditOnlinePacUrlDialog.h  EditServerDialog.cpp  EditServerDialog.h  EditServerDialog.ui  GfwlistToPacUtil.cpp  GfwlistToPacUtil.h  QRencodeWidget.cpp  QRencodeWidget.h  README.en.md  README.md  ShareServerConfigWidget.cpp  ShareServerConfigWidget.h  ShowLogWidget.cpp  SystemTrayIcon.cpp  SystemTrayIcon.h  autoproxy.pac  build.sh  build_QtShadowsocks.sh  deepin-shadowsocks-client.desktop  deepin-ss-client.desktop  dev.sh  get_config.sh  icons.qrc  log.md  main.cpp  proxy.pac  release.sh  shadowsocks-client.desktop  shadowsocks-deepin.pro  影梭客户端原理剖析.md
Resources/: proxy.pac  shadowsocks-client.desktop
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  shadowsocks-client.cron.d.ex  shadowsocks-client.default.ex  shadowsocks-client.doc-base.EX  shadowsocks-client.substvars  shadowsocks-deepin.substvars  watch.ex
debian.bak/: control  rules
debian/.debhelper/shadowsocks-client/: dbgsym-build-ids
debian/shadowsocks-client/DEBIAN/: control  md5sums
doc/: log.md  深度影梭客户端开发文档.md
docs/: README.en.md  README_CN.md  log.md  影梭客户端原理剖析.md  翻译.md
flatpak/: Makefile  build_shadowsocks-client.sh  cn.net.pikachu.shadowsocks-client.json
include/botan-2/botan/: build.h
obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
obj-x86_64-linux-gnu/src/: Makefile  cmake_install.cmake  shadowsocks-client
obj-x86_64-linux-gnu/src/shadowsocks-client_autogen/: mocs_compilation.cpp
obj-x86_64-linux-gnu/src/shadowsocks-client_autogen/EWIEGA46WW/: moc_ConfigDialog.cpp  moc_DDEProxyModeManager.cpp  moc_GuiConfig.cpp  moc_LogMainWindow.cpp  (+10 more)
src/: CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  ConfigItem.cpp  ConfigItem.h  ConfigUtil.h  DDEProxyModeManager.cpp  DDEProxyModeManager.h  DownloadUtil.cpp  DownloadUtil.h  EditServerDialog.cpp  EditShortcutsWidget.cpp  GfwlistToPacUtil.cpp  GfwlistToPacUtil.h  GuiConfig.cpp  GuiConfig.h  HotkeySettingsDialog.cpp  HotkeySettingsDialog.h  LogMainWindow.cpp  LogMainWindow.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MultiListItem.cpp  MultiListItem.h  MultiListView.cpp  MultiListView.h  PACUrlDialog.cpp  PACUrlDialog.h  PositiveAgentWidget.cpp  PositiveAgentWidget.h  ProfileItem.cpp  ProfileItem.h  ProfileView.cpp  ProfileView.h  ProxyDialog.cpp  ProxyDialog.h  ProxyManager.cpp  ProxyManager.h  (+55 more)
src/3rd_part/: version.txt
src/3rd_part/include/botan-2/botan/: build.h
src/common/: QCore.h  QDus.h  QGui.h  QNetwork.h  QWidgets.h  Qss.h  common.h  dtk.h
src/dao/: ConfigDAO.cpp  ConfigDAO.h  DBHelper.cpp  DBHelper.h  GuiConfigDao.cpp  GuiConfigDao.h
src/dbusinterface/: DBusStartManager.cpp  DBusStartManager.h  com.deepin.StartManager.xml
src/forms/: ConfigDialog.ui  HotkeySettingsDialog.ui  LogMainWindow.ui  MainWindow.ui  PACUrlDialog.ui  ProxyDialog.ui
src/i18n/: shadowsocks-deepin_zh.qm  shadowsocks-deepin_zh.ts  shadowsocks-deepin_zh.xml
src/interface/: Proxy.cpp  Proxy.h  ProxyConfig.cpp  ProxyConfig.h  ProxyManager.cpp  ProxyManager.h  SystemProxyModeManager.cpp  SystemProxyModeManager.h
src/model/: Config.h  Connection.cpp  Connection.h  ConnectionItem.cpp  ConnectionItem.h  ConnectionTableModel.cpp  ConnectionTableModel.h  GuiConfig.cpp  GuiConfig.h  Hotkey.h  JsonObjectSerializable.h  LogViewer.h  Proxy.cpp  Proxy.h  SQProfile.cpp  SQProfile.h  SSConfig.cpp  SSConfig.h
src/resources/: qrc.qrc
src/service/: AboutService.h  BootService.h  HotkeyService.h  LogService.h  PacService.h  ProxyService.cpp  ProxyService.h  ServerService.h  Strategy.h  UpdateService.h
src/service/impl/: AboutServiceImpl.h  AboutServiceImpl_old_impl.cpp  AboutServiceImpl_old_impl.h  BalancingStrategy.cpp  BalancingStrategy.h  BootServiceImpl.h  BootServiceImpl_with_dde_api.cpp  BootServiceImpl_with_dde_api.h  HighAvailabilityStrategy.cpp  HighAvailabilityStrategy.h  HotkeyServiceImpl.h  HotkeyServiceImpl_old_impl.cpp  HotkeyServiceImpl_old_impl.h  LogServiceImpl.h  LogServiceImpl_old_impl.cpp  LogServiceImpl_old_impl.h  PacServiceImpl.h  PacServiceImpl_old_impl.cpp  PacServiceImpl_old_impl.h  ProxyServiceImpl.h  ProxyServiceImpl_with_dde_api.cpp  ProxyServiceImpl_with_dde_api.h  ServerSerivceImpl.h  ServerSerivceImpl_old_impl.cpp  ServerSerivceImpl_old_impl.h  ServiceImpl.h  UpdateServiceImpl.h  UpdateServiceImpl_old_impl.cpp  UpdateServiceImpl_old_impl.h
src/translations/: shadowsocks-client_en.xml  shadowsocks-client_zh.qm  shadowsocks-client_zh.ts  shadowsocks-client_zh.xml  shadowsocks-client_zh.xml.qm  shadowsocks-deepin_en.ts  shadowsocks-deepin_zh.qm  shadowsocks-deepin_zh.ts
src/ui/: Ui_SystemTrayIcon.cpp  Ui_SystemTrayIcon.h
src/util/: ConfigHelper.cpp  ConfigHelper.h  ConfigUtil.cpp  ConfigUtil.h  DownloadUtil.cpp  DownloadUtil.h  GfwlistToPacUtil.cpp  GfwlistToPacUtil.h  SsValidator.cpp  UpdateChecker.cpp  UpdateChecker.h  Util.cpp  Util.h
src/utils/: lupdate_tools.sh  translate_generation.sh
src/widget/: ConnectionView.cpp  ConnectionView.h  EditHotkeysDialog.cpp  EditHotkeysDialog.h  EditHotkeysDialog.ui  EditOnlinePacUrlDialog.cpp  EditOnlinePacUrlDialog.h  EditOnlinePacUrlDialog.ui  EditServerDialog.cpp  EditServerDialog.h  EditServerDialog.ui  EditShortcutsWidget.h  ListItem.cpp  ListItem.h  ListView.cpp  ListView.h  PositiveAgentWidget.h  ProfileItem.h  ProfileView.cpp  ProfileView.h  QRencodeWidget.cpp  ShareServerConfigWidget.cpp  ShareServerConfigWidget.h  ShowLogWidget.cpp  ShowLogWidget.h  SingleListItem.cpp  SingleListItem.h  SingleListView.cpp  SingleListView.h  Toolbar.cpp  Toolbar.h
src/widgets/: ProfileItem.cpp  ProfileItem.h  ProfileView.h  QRWidget.cpp  QRWidget.h  SingleListItem.cpp  SingleListItem.h  SingleListView.h
translations/: shadowsocks-client.ts  shadowsocks-client_zh_CN.qm  shadowsocks-client_zh_CN.ts
(+26 files in other folders)
